@@ -1,19 +1,23 @@
 package com.domenicozagaria.admin.product;
 
+import com.domenicozagaria.admin.util.Utility;
 import com.domenicozagaria.dto.ProductDTO;
 import com.domenicozagaria.exception.MissingEntityException;
-import com.domenicozagaria.admin.util.Utility;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
 
     private final ProductRepository productRepository;
+    private final ProductDTOMapper productDTOMapper;
 
-    public ProductService(ProductRepository productRepository) {
+    public ProductService(ProductRepository productRepository, ProductDTOMapper productDTOMapper) {
         this.productRepository = productRepository;
+        this.productDTOMapper = productDTOMapper;
     }
 
     public void saveProduct(String name, int stock) {
@@ -23,16 +27,25 @@ public class ProductService {
         productRepository.save(product);
     }
 
-    public ProductDTO getProductById(int id) throws Throwable {
-        return (ProductDTO) Utility.findEntityById(productRepository, id)
-                .map(Product::toDTO)
+    public ProductDTO getProductById(int id) {
+        return Utility.findEntityById(productRepository, id)
+                .map(productDTOMapper)
                 .orElseThrow(MissingEntityException::new);
     }
 
     public List<ProductDTO> findAllProducts() {
-        return productRepository.findAll()
-                .stream()
-                .map(Product::toDTO)
-                .toList();
+        return Utility.mapCollectionTo(
+                productRepository.findAll(),
+                productDTOMapper,
+                Collectors.toList()
+        );
+    }
+
+    public List<ProductDTO> findAllProductsByTags(Set<Integer> tagIds) {
+        return Utility.mapCollectionTo(
+                productRepository.findAllByTagList_IdIn(tagIds),
+                productDTOMapper,
+                Collectors.toList()
+        );
     }
 }
